Update gitignore and secure environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
-node_modules
+# Node modules
+node_modules/
+
+# Environment variables
 .env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Build / dist folders (if you add later)
+dist/
+build/
+
+# IDE folders (optional but recommended)
+.vscode/
