--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@apollo/client": "^4.1.6",
+    "@apollo/server": "^5.4.0",
+    "@as-integrations/next": "^4.1.0",
     "graphql": "^16.12.0",
+    "mysql2": "^3.18.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
