--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "yallist": "^4.0.0"
   },
  "scripts": {
-  "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
+  "dev": "npm run dev --prefix frontend"
   },
   "repository": {
     "type": "git",
