--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Food marketplace MVP using Node.js, GraphQL, MySQL",
   "main": "index.js",
   "dependencies": {
+    "@apollo/client": "^4.1.6",
     "accepts": "^1.3.8",
     "apollo-datasource": "^3.3.2",
     "apollo-reporting-protobuf": "^3.4.0",
@@ -53,7 +54,7 @@
     "get-intrinsic": "^1.3.0",
     "get-proto": "^1.0.1",
     "gopd": "^1.2.0",
-    "graphql": "^16.12.0",
+    "graphql": "^16.13.0",
     "graphql-tag": "^2.12.6",
     "has-property-descriptors": "^1.0.2",
     "has-symbols": "^1.1.0",
@@ -130,8 +131,8 @@
     "xss": "^1.0.15",
     "yallist": "^4.0.0"
   },
- "scripts": {
-  "dev": "npm run dev --prefix frontend"
+  "scripts": {
+    "dev": "npm run dev --prefix frontend"
   },
   "repository": {
     "type": "git",
